--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".Detail" />
-        <activity android:name=".Aboutme"></activity>
+        <activity android:name=".Aboutme" />
+        <activity android:name=".TestLayout"></activity>
     </application>
 
 </manifest>
